# gas-analyzer

./: Cargo.toml  README.md  example.t.sol  report.json
.github/workflows/: ci.yml
artifacts/contract.sol/: Counter1.json  TypeHashHelper.json
cache/: solidity-files-cache.json
src/: config.rs  contract.sol  lib.rs  loader.rs  main.rs
src/optimizor/: ast.json  ast.rs  bytes32.rs  cache_state_variables.rs  constructor_check_absence.rs  do_while.rs  emit_loops.rs  gas_tricks.rs  mapping_instead_array.rs  mod.rs  openzeppelin.rs  pack_related_vars.rs  priv_constants_immut.rs  require_double_logic.rs  revert_32.rs  safemath.rs  struct_packing.rs  token.rs  uint256_instead_bool.rs  uint_incur_overhead.rs  use_named_returns.rs  write_zero_to_storage.rs
src/utils/: data_types.rs  extract_state_vars.rs  extract_struct_node.rs  get_all_state_var.rs  mod.rs  number_to_types.rs  types_to_numbers.rs  update_gas_ineffiency_map.rs
tests/: all_test.rs  gas_tricks_test.rs  regex_expect_revert.sol
