[package]
name = "gas_analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.4.7"
ethers = "2.0.10"
ethers-solc = "2.0.10"
regex = "1.10.2"
reqwest = "0.11.22"
serde_json = "1.0.107"
snap = "1.1.0"
tokio = {version = "1", features = ["full"]}
